#V1.5.4 修改 新增fixedContentHeight,fixedContentWidth属性

--- a/lib/src/main/res/values/attrs.xml
+++ b/lib/src/main/res/values/attrs.xml
@@ -27,6 +27,7 @@
         <attr name="rightOffset" format="dimension"/>
         <attr name="topOffset" format="dimension"/>
         <attr name="bottomOffset" format="dimension"/>
-        <attr name="fixedContentSize" format="boolean"/>
+        <attr name="fixedContentWidth" format="boolean"/>
+        <attr name="fixedContentHeight" format="boolean"/>
     </declare-styleable>
 </resources>
