--- a/kotlin/src/main/res/values/attrs.xml
+++ b/kotlin/src/main/res/values/attrs.xml
@@ -13,6 +13,17 @@
             <enum name="linear" value="1"/>
         </attr>
         <attr name="cardBackgroundColor" format="color"/>
+        <attr name="cardBackground" format="reference|color"/>
+        <attr name="gradientColors" format="string"/>
+        <attr name="gradientSizeFollowView" format="boolean"/>
+        <attr name="gradientDirection" format="enum">
+            <enum name="topToBottom" value="0"/>
+            <enum name="leftToRight" value="1"/>
+            <enum name="leftTopToRightBottom" value="2"/>
+            <enum name="leftBottomToRightTop" value="3"/>
+        </attr>
+        <attr name="strokeWidth" format="dimension"/>
+        <attr name="strokeColor" format="color"/>
         <attr name="cornerRadius" format="dimension"/>
         <attr name="leftTopCornerRadius" format="dimension"/>
         <attr name="rightTopCornerRadius" format="dimension"/>
