--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -6,20 +6,21 @@
     android:layout_height="wrap_content"
     app:bindLifeCircle="true"
     app:useShadowPool="true"
-    app:cornerRadius="75dp"
+    app:cornerRadius="10dp"
     app:strokeColor="#fff"
     app:strokeWidth="0dp"
-    app:shadowColor="#000"
+    app:cardBackground="@mipmap/girl"
+    app:shadowColor="#0aa"
     app:topOffset="-2dp"
-    app:cardBackground="@drawable/test"
-    app:shadowSize="20dp"
+    app:shadowSize="10dp"
     app:shadowStartAlpha="100">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:scaleType="fitXY"/>
+        android:layout_width="100dp"
+        android:src="@mipmap/girl"
+        android:layout_height="250dp"
+        android:scaleType="fitStart"/>
 
     <TextView
         android:id="@+id/testView"
