--- a/kotlin/src/main/res/values/attrs.xml
+++ b/kotlin/src/main/res/values/attrs.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="LCardView">
-        <attr name="leftShadowWidth" format="dimension"/>
-        <attr name="topShadowHeight" format="dimension"/>
-        <attr name="rightShadowWidth" format="dimension"/>
-        <attr name="bottomShadowHeight" format="dimension"/>
+        <attr name="leftShadowDecrement" format="dimension"/>
+        <attr name="topShadowDecrement" format="dimension"/>
+        <attr name="rightShadowDecrement" format="dimension"/>
+        <attr name="bottomShadowDecrement" format="dimension"/>
         <attr name="shadowSize" format="dimension"/>
         <attr name="shadowColor" format="color"/>
         <attr name="shadowStartAlpha" format="integer"/>
